# jonny

./: .env.example  .gitignore  Makefile  README.md  SYSTEM.md  config.yaml  middleware.ts  package-lock.json  package.json  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/files/: page.tsx
app/login/: page.tsx
clients/: voice_cli.py
jarvis/: .env.example  Makefile  README.md  config.yaml  pyproject.toml
jarvis/prompts/: system.md
jarvis/scripts/: com.francescotomatis.jarvis-tunnel.plist  com.francescotomatis.jarvis-watchdog.plist  com.francescotomatis.jarvis-web.plist  mac-liveness.sh  tunnel.sh
jarvis/src/: config.py  main.py  profile.py  server.py
jarvis/src/audio/: echo.py  turndetect.py  turntaking.py  vad.py
jarvis/src/knowledge/: base.py  cli.py
jarvis/src/llm/: __init__.py  anthropic_client.py  base.py  cost.py  ollama_client.py  openai_compat.py  router.py
jarvis/src/memory/: mem0_store.py
jarvis/src/ops/: doctor.py  watchdog.py
jarvis/src/research/: cli.py  pipeline.py
jarvis/src/stt/: base.py  realtime.py
jarvis/src/tools/: __init__.py  stores.py  web.py
jarvis/src/tts/: __init__.py  base.py
jarvis/src/wakeword/: __init__.py
knowledge/: mareluna-project.md
knowledge/research/: free-tide-prediction-apis-for-the-mediterranean-20260708.md
lib/: auth.ts  brain.ts
prompts/: system.md
public/: pcm-worklet.js
scripts/: com.francescotomatis.jarvis-web.plist  com.francescotomatis.jarvis.plist
src/: context.py  main.py  server.py
src/audio/: turntaking.py  vad.py
src/knowledge/: __init__.py  chroma_index.py  watcher.py
src/llm/: __init__.py  anthropic_client.py  base.py  openai_compat.py  router.py
src/memory/: __init__.py  base.py  cli.py  mem0_store.py
src/research/: pipeline.py
src/stt/: __init__.py  mictest.py  realtime.py
(+16 files in other folders)
